apps/observability/components/istio/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana
  namespace: observability
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - ./grafana.${cluster_name}.rbn.is
      port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - ./grafana.${cluster_name}.rbn.is
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cert-grafana
